# fastapi-project2

./: Dockerfile  app.env  docker-compose.yml  pyproject.toml
app/: alembic.ini  main.py
app/db/: connection.py  models.py
app/migrations/: env.py
app/migrations/versions/: 1db723f47548_add_categories_table.py  35b833da5dfc_add_categories_table_and_products.py  65ee4d34a5a6_add_categories_table.py  925758de6e8d_add_products_table.py  aa73c09aff3e_add_users_table.py
app/routes/: category_routes.py  deps.py  product_routes.py
app/schemas/: category.py  product.py  user.py
app/test/: conftest.py
app/test/routes/: test_category_routes.py  test_product_routes.py
app/test/schemas/: test_category_schema.py  test_product_schema.py
app/test/use_cases/: test_category_use_cases.py  test_product_use_cases.py  test_user_schemas.py
app/use_cases/: category.py  product.py
