[tool.poetry]
name = "fastapi-project2"
version = "0.1.0"
description = ""
authors = ["leandrovarela94 <leandrovarela.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10.6"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
aiohttp = "^3.8.4"
requests = "^2.30.0"
pydantic = "^1.10.7"
SQLAlchemy = "^2.0.13"
psycopg2-binary = "^2.9.6"
alembic = "^1.10.4"
python-decouple = "^3.8"
pytest = "^7.3.1"
httpx = "^0.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
